--- a/Projects.html
+++ b/Projects.html
@@ -24,10 +24,23 @@
           <a class="active" href="Projects.html">Projects</a>
           <a href="capital.html">Altellect Capital</a>
           <a href="carrers.html">Careers</a>
-     
           <a href="contact.html">Contact Us</a>
       </nav>
-        <a class="join-btn" href="join.html">Join The Ecosystem</a>
+      <a class="join-btn" href="join.html">Join The Ecosystem</a>
+      <button class="mobile-menu-toggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+    <div class="mobile-menu">
+      <a href="index.html">Home</a>
+      <a href="about-us.html">About Us</a>
+      <a href="Projects.html">Projects</a>
+      <a href="capital.html">Altellect Capital</a>
+      <a href="carrers.html">Careers</a>
+      <a href="contact.html">Contact Us</a>
+      <a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
     </div>
   </header>
   <section  class="about-hero"style="position: relative; background: url('assets/Group 7860.png') center/cover no-repeat;  display: flex; align-items: flex-end;">
@@ -156,5 +169,7 @@
       <a href="Privacy.html">Privacy Policy</a>
     </div>
   </footer>
+
+<script src="mobile-menu.js"></script>
 </body>
 </html>
