--- a/capital.html
+++ b/capital.html
@@ -27,10 +27,23 @@
 				<a href="Projects.html">Projects</a>
 				<a class="active" href="capital.html">Altellect Capital</a>
 				<a href="carrers.html">Careers</a>
-
 				<a href="contact.html">Contact Us</a>
 			</nav>
 			<a class="join-btn" href="join.html">Join The Ecosystem</a>
+			<button class="mobile-menu-toggle" aria-label="Toggle menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+		</div>
+		<div class="mobile-menu">
+			<a href="index.html">Home</a>
+			<a href="about-us.html">About Us</a>
+			<a href="Projects.html">Projects</a>
+			<a href="capital.html">Altellect Capital</a>
+			<a href="carrers.html">Careers</a>
+			<a href="contact.html">Contact Us</a>
+			<a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
 		</div>
 	</header>
 
@@ -204,6 +217,7 @@
 		</div>
 	</footer>
 
+	<script src="mobile-menu.js"></script>
 </body>
 
 </html>
