--- a/carrers.html
+++ b/carrers.html
@@ -23,12 +23,26 @@
 		<nav class="nav">
 			<a href="index.html">Home</a>
 			<a href="about-us.html">About Us</a>
-			<a href="#">Projects</a>
+			<a href="Projects.html">Projects</a>
 			<a href="capital.html">Altellect Capital</a>
 			<a class="active" href="carrers.html">Careers</a>
-			<a href="./contact.html">Contact Us</a>
+			<a href="contact.html">Contact Us</a>
 		</nav>
     <a class="join-btn" href="join.html">Join The Ecosystem</a>
+		<button class="mobile-menu-toggle" aria-label="Toggle menu">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+	</div>
+	<div class="mobile-menu">
+		<a href="index.html">Home</a>
+		<a href="about-us.html">About Us</a>
+		<a href="Projects.html">Projects</a>
+		<a href="capital.html">Altellect Capital</a>
+		<a href="carrers.html">Careers</a>
+		<a href="contact.html">Contact Us</a>
+		<a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
 	</div>
 </header>
 
@@ -547,5 +561,6 @@
   });
 </script>
 
+<script src="mobile-menu.js"></script>
 </body>
 </html>
