--- a/join.html
+++ b/join.html
@@ -12,23 +12,36 @@
 <body>
 
 <!-- HEADER (same as other pages) -->
-<header class="header-two ">
+<header class="header-two">
     <div class="header-container container">
         <div class="logo-wrap">
-                        <a href="index.html">
-                            <img src="assets/Logo.png" alt="Altellect" />
-                        </a>
+            <a href="index.html">
+                <img src="assets/Logo.png" alt="Altellect" />
+            </a>
         </div>
         <nav class="nav">
-              <a href="index.html" class="nav-link">Home</a>
-              <a href="about-us.html" class="nav-link">About Us</a>
-              <a href="Projects.html" class="nav-link">Projects</a>
-              <a href="capital.html" class="nav-link nav-capital">Altellect Capital</a>
-              <a href="carrers.html" class="nav-link">Careers</a>
-              <a href="contact.html" class="nav-link">Contact Us</a>
-              <span class="nav-slider"></span>
+              <a href="index.html">Home</a>
+              <a href="about-us.html">About Us</a>
+              <a href="Projects.html">Projects</a>
+              <a href="capital.html">Altellect Capital</a>
+              <a href="carrers.html">Careers</a>
+              <a href="contact.html">Contact Us</a>
         </nav>
-           <a class="join-btn active" href="join.html">Join The Ecosystem</a>
+        <a class="join-btn active" href="join.html">Join The Ecosystem</a>
+        <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </div>
+    <div class="mobile-menu">
+        <a href="index.html">Home</a>
+        <a href="about-us.html">About Us</a>
+        <a href="Projects.html">Projects</a>
+        <a href="capital.html">Altellect Capital</a>
+        <a href="carrers.html">Careers</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
     </div>
 </header>
 
@@ -136,5 +149,6 @@
     </div>
 </footer>
 
+<script src="mobile-menu.js"></script>
 </body>
 </html>
