--- a/Privacy.html
+++ b/Privacy.html
@@ -16,9 +16,9 @@
     <header class="header">
         <div class="header-container container">
             <div class="logo-wrap">
-                                <a href="index.html">
-                                    <img src="assets/Logo.png" alt="Altellect" />
-                                </a>
+                <a href="index.html">
+                    <img src="assets/Logo.png" alt="Altellect" />
+                </a>
             </div>
             <nav class="nav">
                     <a href="index.html">Home</a>
@@ -28,7 +28,21 @@
                     <a href="carrers.html">Careers</a>
                     <a href="contact.html">Contact Us</a>
             </nav>
-                <a class="join-btn" href="join.html">Join The Ecosystem</a>
+            <a class="join-btn" href="join.html">Join The Ecosystem</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+        <div class="mobile-menu">
+            <a href="index.html">Home</a>
+            <a href="about-us.html">About Us</a>
+            <a href="Projects.html">Projects</a>
+            <a href="capital.html">Altellect Capital</a>
+            <a href="carrers.html">Careers</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
         </div>
     </header>
 
@@ -119,5 +133,6 @@
     </div>
 </footer>
 
+<script src="mobile-menu.js"></script>
 </body>
 </html>
