--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <a href="index.html">
         <img src="assets/Logo.png" alt="Altellect" />
       </a>
- 
     </div>
 
     <nav class="nav">
@@ -33,14 +32,29 @@
       <a href="Projects.html">Projects</a>
       <a href="capital.html">Altellect Capital</a>
       <a href="carrers.html">Careers</a>
-     
       <a href="contact.html">Contact Us</a>
     </nav>
 
-     <a class="join-btn" href="join.html">Join The Ecosystem</a>
-        <title>Altellect</title>
-        <link rel="icon" type="image/png" href="assets/Logo.png" />
+    <a class="join-btn" href="join.html">Join The Ecosystem</a>
+    
+    <button class="mobile-menu-toggle" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </div>
 </header>
+
+<!-- Mobile Menu -->
+<div class="mobile-menu">
+    <a href="index.html">Home</a>
+    <a href="about-us.html">About Us</a>
+    <a href="Projects.html">Projects</a>
+    <a href="capital.html">Altellect Capital</a>
+    <a href="carrers.html">Careers</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="join.html" class="mobile-join-btn">Join The Ecosystem</a>
+</div>
 
 <!-- HERO BANNER -->
 <section class="hero">
@@ -306,5 +320,6 @@ document.getElementById('quickContactForm').onsubmit = async function(e) {
   </div>
 </footer>
 
+<script src="mobile-menu.js"></script>
 </body>
 </html>
