--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
         const message = document.getElementById('message').value.trim();
 
         try {
-          const res = await fetch('https://altellect.softwareapi/contact/', {
+          const res = await fetch('https://altellect.software/api/contact/', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, subject, message })
